syntax = "proto3";

option java_package = "com.zjj.proto";
option java_outer_classname = "CtrlMessage";

message MultiMessage {
  enum MultiType {
    INET_COMMAND = 0;
    REQ_ADDR = 1;
    SYN = 2;
    SYN_ACK = 3;
    ACK = 4;
    REQ_REDIRECT = 5;
    PLOT_TRACE = 6;
    PLOT_TRACE_REDIRECT = 7;
    TRACK_TRACE = 8;
    TRACK_TRACE_REDIRECT = 9;
    BLACK_TRACE_REDIRECT = 10;
    PSP_MESSAGE = 11;
  }
  MultiType multiType = 1;
  oneof MultiBody {
    InetCommand inetCommand = 2;
    ReqAddr reqAddr = 3;
    Syn syn = 4;
    SynAck synAck = 5;
    Ack ack = 6;
    ReqRedirect reqRedirect = 7;
    PlotTrace plotTrace = 8;
    PlotTraceRedirect plotTraceRedirect = 9;
    TrackTrace trackTrace = 10;
    TrackTraceRedirect trackTraceRedirect = 11;
    BlackTraceRedirect blackTraceRedirect = 12;
    P2PMessage p2PMessage = 13;
  }
}

enum InetType {
  PRIVATE = 0;
  PUBLIC = 1;
}

message InetCommand {
  string clientId = 1;
  string host = 2;
  int32 port = 3;
  InetType inetType = 4;
}

message ReqAddr {
  string id = 1;
}

message Syn {
  string from = 1;
  string to = 2;
}

message SynAck {
  string from = 1;
  string to = 2;
}

message Ack {
  string from = 1;
  string to = 2;
}

message ReqRedirect {
  string from = 1;
  string to = 2;
  string fromAddr = 3;
}

message PlotTrace {
  FrameHead frameHead = 1;
  repeated Plot plots = 2;
}

message PlotTraceRedirect {
  FrameHead frameHead = 1;
  repeated Plot plots = 2;
  string to = 3;
}

message TrackTrace {
  FrameHead frameHead = 1;
  repeated Track tracks = 2;
}

message TrackTraceRedirect {
  FrameHead frameHead = 1;
  repeated Track tracks = 2;
  string to = 3;
}

message BlackTraceRedirect {
  string from = 1;
  string to = 2;
  bytes data = 3;
}

message FrameHead {
  double magicNum = 1;
  string nodeId = 2;
  double recvLongitude = 3;
  double recvLatitude = 4;
  double recvHeight = 5;
  double transLongitude = 6;
  double transLatitude = 7;
  double transHeight = 8;
  float signalFrequency = 9;
  double refreshPeriod = 10;
  int32 traceNum = 11;
  double timestamp = 12;
}

message Plot {
  float bistaticRange = 1;
  float bistaticVelocity = 2;
  float azimuth = 3;
  float height = 4;
  float power = 5;
  float snr = 6;
  float phase = 7;
}

message Track {
  double batchNum = 1;
  double longitude = 2;
  double latitude = 3;
  double height = 4;
  double range = 5;
  double position = 6;
  double elevation = 7;
  double horizontalVelocity = 8;
  double verticalVelocity = 9;
  double course = 10;
  double power = 11;
  double snr = 12;
  double phase = 13;
}

message P2PMessage {
  enum MsgType {
    SAVE_ADDR = 0;
    HEART_BEAT = 1;
    CHAT = 2;
  }
  MsgType type = 1;
  string message = 2;
}

//protoc -I=src/main/resources/proto --java_out=src/main/java ctrlMessage.proto
